# triples_world_model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: README.md  test_snapshot.json  v18_mini64.json  v19_mini64.json  v20_dynamics_only.json  v20_mini64.json  v21_vae_mini64.json  v22_e2e_spectral_light.json  v23_joint_training.json  v24_joint_no_warmup.json  v25_clean_conditioning.json  v26_joint_qa.json  v27_joint_qa_lenfix.json  v28_d128.json  v30_no_vae.json  v31_no_vae_tokfix.json  v31b_qa.json  v32_length_hint.json  v33_micro.json  v33b_micro.json  v34_triples_16.json  v34_triples_4.json  v34_triples_8.json  v35_d64_t16.json  v36_frozen_io.json  v37_joint_all.json  v38_balanced_joint.json  v39_d128_balanced.json  v40_8dyn_balanced.json  v41_single_phase.json  v42_anneal.json  v43_micro_deep.json  v44_8dyn_anneal.json  v45_diffusion_compressor.json  v46_diffcomp_k10.json  v47_diffcomp_randomk.json  v48_diffcomp_joint.json  v48b_diffcomp_2layer.json  v49_diffcomp_k5_joint.json  v50_diffcomp_k5_joint_d128.json  (+2 more)
data/: context_dependent_train.jsonl  openpi_test.jsonl  openpi_train.jsonl  propara_dev.jsonl  propara_test.jsonl  propara_train.jsonl  test_comp.jsonl  test_comp_v2.jsonl  test_seen.jsonl  test_seen_v2.jsonl  train.jsonl
findings/: progress.md
research/: architecture.md  references.md  sprint3_diffusion_decoder.md  sprint4_config_driven_training.md  sprint5_vae_bottleneck.md  theoretical_foundations.md
results/: README.md  cedric_mode_probe_v2_findings.md  llm_bench_openpi_dev_5shot.json  llm_bench_test_seen_5shot.json
scripts/: benchmark_family.py  (+82 more)
(+124 files in other folders)
