[project]
name = "twm"
version = "0.1.0"
description = "Triple World Model — learning temporal state dynamics over structured triples"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twm"]
