[project]
name = "twm"
version = "0.1.0"
description = "Triple World Model — learning temporal state dynamics over structured triples"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "tqdm",
    "matplotlib",
    "gensim>=4.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twm"]
